.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-management-api
  template:
    metadata:
      labels:
        app: dc-management-api
    spec:
      containers:
        - name: dc-management-api
          image: inseefrlab/datacollection-management-api:0.0.53
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
