.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-management-api-svc
spec:
  selector:
    app: dc-management-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
